# aa-rs-spidermonkey

./: .gitignore  Cargo.toml  readme.md
migrations/2019-09-23-194032_create_apps/: up.sql
migrations/2019-09-23-194040_create_routes/: up.sql
models/: Cargo.toml
models/migrations/2019-09-19-230551_create_apps/: down.sql  up.sql
models/migrations/2019-09-19-230800_create_views/: up.sql
models/migrations/2019-09-19-230802_create_routes/: up.sql
models/src/: lib.rs  models.rs  schema.rs
src/: js.rs  main.rs  models.rs  schema.rs  services.rs
static/js/: app.js
