[package]
name = "appassembly"
version = "0.1.0"
authors = ["Feni <feni727@gmail.com>"]
edition = "2018"


[dependencies]
serde_derive = "1.0.101"
serde = "1.0.101"
futures = "0.1.29" 
http = "0.1.18"
url = "2.1.0"
serde_json = "1.0.40"
actix-web = "1.0.7"
actix-files = "0.1.4"
diesel = { version = "1.4.2", features = ["postgres"] }
dotenv = "0.14.1"